Experimental server java config to improve performance.